# minx

./: .env.example  .gitignore  HANDOFF.md  OPERATIONS.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT_GUIDE.md  ARCHITECTURE.md  GETTING_STARTED.md  MINX_CHEAP_MODEL_ROUTING.md  RUNBOOK.md  hermes-capability-roadmap-2026-04-14.md
docs/archive/: handoff-history.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-04-01-minx-core-finance.md  2026-04-01-minx-mcp.md  2026-04-05-minx-mcp-contracts.md  2026-04-06-finance-cents.md  2026-04-06-phase2-readiness-hardening.md  2026-04-07-slice2-goals-drift.md  2026-04-07-stabilization-publish.md  2026-04-08-roadmap-projection-refresh.md  2026-04-08-slice2-1-conversational-goals.md  2026-04-08-slice2-1-trust-hardening.md  2026-04-09-current-domains-hardening-and-finance-maturity.md  2026-04-09-llm-reliability-and-finance-hardening.md  2026-04-09-slice2-hardening-merge.md  2026-04-10-phase1-hardening-followups.md  2026-04-12-slice3-meals-mcp.md  2026-04-13-slice3-nutrition-meals-handoff.md  2026-04-13-slice3-phase3-shopping-list-handoff.md  2026-04-13-slice4-training-mcp-hermes-handoff.md  2026-04-13-slice4-training-mcp.md  2026-04-15-code-quality-cleanup.md  2026-04-15-consolidation-and-refactor.md  2026-04-15-hermes-intelligence-plan.md  2026-04-15-slice6-and-8-design.plan.md  2026-04-17-slice6c-vault-scanner.md  2026-04-27-generic-memory-capture.md  2026-04-27-slice6i-memory-fts5.md  2026-04-28-hermes-investigation-loop.md  2026-04-30-discord-obsidian-flow-implementation.md  README.md  cleanup.md  consolidation.md
docs/superpowers/specs/: 2026-04-01-minx-core-finance-design.md  2026-04-05-minx-mcp-contracts-design.md  2026-04-06-finance-cents-design.md  2026-04-06-finance-cents-domain-boundary-design.md  2026-04-06-minx-life-os-architecture-design.md  (+28 more)
minx_mcp/: audit.py  base_service.py  config.py  contracts.py  db.py  document_text.py  entrypoint.py  event_payloads.py  jobs.py  launcher.py  logging_config.py  money.py  preferences.py  time_utils.py  transport.py  validation.py  vault_reader.py  vault_writer.py
minx_mcp/core/: __init__.py  __main__.py  detectors.py  enrichment_queue.py  events.py  fingerprint.py  goal_capture.py  goal_capture_llm.py  goal_capture_nl.py  goal_capture_structured.py  goal_capture_utils.py  goal_detectors.py  goal_models.py  goal_parse.py  goal_progress.py  goals.py  history.py  investigations.py  llm.py  llm_openai.py  memory_capture.py  memory_detectors.py  memory_edges.py  memory_embeddings.py  memory_fingerprints.py  memory_ingest.py  memory_models.py  memory_payloads.py  memory_search.py  memory_secret_scanning.py  memory_service.py  models.py  playbooks.py  protocols.py  query_models.py  read_models.py  render_templates.py  review.py  review_policy.py  secret_scanner.py  (+7 more)
minx_mcp/finance/: __init__.py  __main__.py  analytics.py  dedupe.py  events.py  import_models.py  import_workflow.py  importers.py  normalization.py  read_api.py  read_models.py  report_builders.py  report_models.py  report_orchestration.py  report_persistence.py  report_rendering.py  reports.py  rules.py  server.py  service.py
minx_mcp/meals/: __init__.py  __main__.py  events.py  models.py  nutrition.py  pantry.py  read_api.py  recipes.py  recommendations.py  server.py  service.py  shopping.py
minx_mcp/schema/: __init__.py
minx_mcp/training/: __main__.py  events.py  models.py  progression.py  read_api.py  server.py  service.py
schema/migrations/: 001_platform.sql  002_finance.sql  003_finance_views.sql  009_cleanup.sql  011_meals_shopping_lists.sql  013_slice6_memory.sql  015_slice6_memories_unique_live.sql
scripts/: backfill_memory_fingerprints.py  configure-openrouter.py  finance-import.py  hermes_slice4_smoke.py  rebuild_finance_dedupe.py  rebuild_memory_fts.py  scan_memory_for_secrets.py  seed-meals.py  seed-training.py  start_hermes_stack.sh
templates/: finance-monthly-summary.md  finance-weekly-summary.md
tests/: __init__.py  conftest.py  helpers.py  test_analytics.py  test_audit.py  test_backfill_memory_fingerprints.py  test_base_service.py  test_bugfix_validation.py  test_config.py  test_contracts.py  test_core_enrichment_tools.py  test_core_llm.py  test_core_mcp_stdio.py  test_core_memory_embedding_tools.py  test_core_memory_tools.py  test_core_server.py  test_core_snapshot_archive_tools.py  test_db.py  test_dedupe.py  test_detector_metadata.py  test_detectors.py  test_document_text.py  test_end_to_end.py  test_enrichment_queue.py  test_event_upcasting.py  test_events.py  test_finance_events.py  test_finance_import_limits.py  test_finance_import_preview.py  test_finance_import_workflow.py  test_finance_monitoring.py  test_finance_parsers.py  test_finance_query_interpretation.py  test_finance_read_api.py  test_finance_reports.py  test_finance_rules.py  test_finance_server.py  test_finance_service.py  test_finance_templates.py  test_fingerprint_golden.py  (+80 more)
tests/fixtures/: fingerprint_golden.json
(+55 files in other folders)
