[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minx-mcp"
version = "0.1.0"
description = "Shared Minx MCP services and finance domain"
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.13.0",
  "pydantic>=2.12.5",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "setuptools>=69",
  "wheel",
]

[project.scripts]
minx-finance = "minx_mcp.finance.__main__:main"
minx-core = "minx_mcp.core.__main__:main"

[tool.setuptools.packages.find]
include = ["minx_mcp*"]

[tool.setuptools.package-data]
"minx_mcp.schema.migrations" = ["*.sql"]

[tool.mypy]
python_version = "3.12"
packages = ["minx_mcp"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
