[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minx-mcp"
version = "0.1.0"
description = "Shared Minx MCP services and finance domain"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "mcp[cli]>=1.13.0",
  "pydantic>=2.12.5",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.4.0",
  "setuptools>=69",
  "wheel",
]

[project.scripts]
minx-finance = "minx_mcp.finance.__main__:main"
minx-core = "minx_mcp.core.__main__:main"
minx-meals = "minx_mcp.meals.__main__:main"
minx-training = "minx_mcp.training.__main__:main"

[tool.setuptools.packages.find]
include = ["minx_mcp*"]

[tool.setuptools.package-data]
"minx_mcp.schema.migrations" = ["*.sql"]
"minx_mcp.finance.templates" = ["*.md"]
"minx_mcp.meals.templates" = ["*.md"]
"minx_mcp.core.templates" = []
"minx_mcp.core.templates.wiki" = ["*.md"]

[tool.mypy]
python_version = "3.12"
packages = ["minx_mcp"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  ".claude",
  ".worktrees",
  "build",
  "minx_mcp.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
markers = [
  "slow: marks transport and end-to-end smoke tests",
]
