[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minx-mcp"
version = "0.1.0"
description = "Local-first Minx MCP servers for finance, meals, training, memory, and cross-domain core workflows"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "mcp[cli]>=1.13.0",
  "pydantic>=2.12.5",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.4.0",
  "setuptools>=69",
  "wheel",
]

[project.scripts]
minx-finance = "minx_mcp.finance.__main__:main"
minx-core = "minx_mcp.core.__main__:main"
minx-meals = "minx_mcp.meals.__main__:main"
minx-training = "minx_mcp.training.__main__:main"

[tool.setuptools.packages.find]
include = ["minx_mcp*"]

[tool.setuptools.package-data]
"minx_mcp.schema.migrations" = ["*.sql"]
"minx_mcp.finance.templates" = ["*.md"]
"minx_mcp.meals.templates" = ["*.md"]
"minx_mcp.core.templates" = []
"minx_mcp.core.templates.wiki" = ["*.md"]

[tool.mypy]
python_version = "3.12"
packages = ["minx_mcp"]
strict = true
explicit_package_bases = true
exclude = [
  "^build/",
  "^scripts/",
  "^tests/",
]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  ".claude",
  ".worktrees",
  "build",
  "minx_mcp.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "PERF", "PTH", "S", "G", "LOG", "C4", "TRY", "N"]
extend-ignore = [
  "TRY003",  # verbose messages in raise() are fine; they're useful
  "TRY301",  # intentional raise inside try to share except paths
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts are fine in tests

[tool.pytest.ini_options]
markers = [
  "slow: marks transport and end-to-end smoke tests",
]
# Treat warnings as errors so resource leaks (unclosed sqlite connections,
# orphaned asyncio event loops) surface as test failures instead of silently
# accumulating. ``tests/conftest.py`` installs an autouse fixture that tracks
# and closes both sqlite connections and asyncio event loops per-test to keep
# this clean; new leaks will fail fast rather than silently regress.
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["minx_mcp"]

[tool.coverage.report]
skip_empty = true
show_missing = true
